# chalk-ai

./: .env.example  .gitignore  LICENSE  README.md  chalk-server.py  chalk.db  pyproject.toml  requirements.txt
chalk/client/: __init__.py  agent.py  chat.py  client.py  config.py  logger.py  message.py  requirements.txt  user.py
chalk/server/: __init__.py  config.py  database.py  db.py  endpoints.py  init.py  logger.py  models.py  redis_channels.py  redis_client.py  requirements.txt  server.py  services.py  tables.py  tasks.py  websocket_handler.py  websocket_manager.py
docs/: client.md  server.md
examples/: .env.example  README.md  __init__.py  customer_service_agent.py  human_in_loop.py  sales_support_agent.py
