[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chalks"
version = "0.1.0"
description = "A minimalist real-time messaging platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zhixiang Xue", email = "zhixiang.xzx@gmail.com"}
]
keywords = ["messaging", "websocket", "real-time", "chat", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (client only)
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# Server dependencies
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "peewee>=3.16.0",
    "redis[hiredis]>=4.0.0",
    "pydantic-settings>=2.0.0",
    "huey>=2.4.0",
    "bcrypt>=4.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# All optional dependencies
all = [
    "chalk[server,examples,dev]",
]

[project.urls]
Homepage = "https://github.com/zhixiangxue/chalk-ai"
Documentation = "https://github.com/zhixiangxue/chalk-ai#readme"
Repository = "https://github.com/zhixiangxue/chalk-ai"
Issues = "https://github.com/zhixiangxue/chalk-ai/issues"

[tool.setuptools]
packages = ["chalk", "chalk.client", "chalk.server"]

[tool.setuptools.package-data]
chalk = ["py.typed"]
